--- a/index.Rmd
+++ b/index.Rmd
@@ -39,8 +39,8 @@ class: inverse, center, middle
 
 ---
 
-```{r xaringan-tile-view, echo=FALSE}
-xaringanExtra::use_tile_view()
+```{r xaringanExtra, echo=FALSE}
+# xaringanExtra::use_tile_view()
 xaringanExtra::use_scribble()
 xaringanExtra::use_clipboard()
 xaringanExtra::use_search(show_icon = TRUE)
