--- a/index.Rmd
+++ b/index.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Fonology"
-subtitle: "An R package for phonological analysis"
+subtitle: "Phonological Analysis in R"
 author: "Guilherme D. Garcia"
 institute: "• Université Laval •"
 date: ""
@@ -29,7 +29,7 @@ knitr::opts_chunk$set(
 class: inverse, center, middle
 
 # Fonology
-## An R package for phonological analysis
+## Phonological Analysis in R
 ### Guilherme D. Garcia
 
 <img src="ULaval2.png" alt="Université Laval" style="width:7%">
