--- a/index.Rmd
+++ b/index.Rmd
@@ -564,6 +564,30 @@ ggplot(data = vowels, aes(x = F2, y = F1, color = vowel, label = vowel)) +
 
 ---
 
+## Example 14: from IPA to TIPA
+
+- If you use $\LaTeX$, `tipa` is essential
+- The function `ipa2tipa()` translates an IPA sequence into `tipa`:
+
+--
+
+```{r}
+"Aqui está uma frase que desejo transcrever fonemicamente" |> 
+  cleanText() |> 
+  ipa(narrow = T) |> 
+  ipa2tipa(pre = "[ ", post = " ]")
+```
+
+--
+
+<br>
+
+<div align="center">
+<img src="tipa.png" alt="Ouput tipa" style="width:100%">
+</div>
+---
+
+
 # The end
 
 ```{r, fig.align='center', fig.width=5, fig.height=3, fig.retina=TRUE, dpi = 800, out.height="300px", echo = TRUE}
