--- a/index.Rmd
+++ b/index.Rmd
@@ -9,7 +9,7 @@ output:
     css: ["default", "default-fonts", "myStyles.css"]
     lib_dir: libs
     nature:
-      highlight: haddock
+      highlightStyle: github
       ratio: '16:9'
       center: true
       slideNumberFormat: "%current% of %total%"
@@ -19,6 +19,7 @@ output:
 ---
 
 ```{r setup, include=FALSE}
+library(fontawesome)
 options(htmltools.dir.version = FALSE)
 knitr::opts_chunk$set(
   collapse = TRUE,
@@ -31,6 +32,9 @@ class: inverse, center, middle
 # Fonology
 ## Phonological Analysis in R
 ### Guilherme D. Garcia
+
+<a href = "https://gdgarcia.ca" style="color: #FEC20B">`r fa("globe-americas")`</a>
+
 
 <img src="ULaval2.png" alt="Université Laval" style="width:7%">
 
@@ -588,11 +592,11 @@ ggplot(data = vowels, aes(x = F2, y = F1, color = vowel, label = vowel)) +
 ---
 
 
-# The end
+# Questions?
 
 ```{r, fig.align='center', fig.width=5, fig.height=3, fig.retina=TRUE, dpi = 800, out.height="300px", echo = TRUE}
 ipa("obrigado") |> 
   plotSon(syl = T)
 ```
 
-This project has benefitted from the ENVOL program (Université Laval). More info at [gdgarcia.ca/fonology](https://gdgarcia.ca/fonology)
+- This project has benefitted from the ENVOL program (Université Laval)
