--- a/index.Rmd
+++ b/index.Rmd
@@ -47,7 +47,7 @@ class: inverse, center, middle
 # xaringanExtra::use_tile_view()
 xaringanExtra::use_scribble()
 xaringanExtra::use_clipboard()
-xaringanExtra::use_search(show_icon = TRUE)
+# xaringanExtra::use_search(show_icon = TRUE)
 xaringanExtra::use_progress_bar(location = "bottom", color = "darkred")
 options(htmltools.dir.version = FALSE)
 xaringanExtra::use_editable()
